--allow-empty-message